--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Webgl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Webgl.data.br",
-        frameworkUrl: buildUrl + "/Webgl.framework.js.br",
-        codeUrl: buildUrl + "/Webgl.wasm.br",
+        dataUrl: buildUrl + "/Webgl.data",
+        frameworkUrl: buildUrl + "/Webgl.framework.js",
+        codeUrl: buildUrl + "/Webgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TestProject - Pusto Studio",
